--- a/Face-Detection-JavaScript-master/index.html
+++ b/Face-Detection-JavaScript-master/index.html
@@ -24,7 +24,7 @@
   </style>
 </head>
 <body>
-  <!-- <video id="video" width="720" height="560" autoplay muted></video> -->
-  <video id="video"</video>
+  <video id="video" width="720" height="560" autoplay muted></video>
+  <!-- <video id="video"</video> -->
 </body>
 </html>
