--- a/Smile-Detection/index.html
+++ b/Smile-Detection/index.html
@@ -5,12 +5,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Document</title>
-<script src="../libs/workshop-utils.js"></script>
   <script defer src="face-api.min.js"></script>
   <script defer src="script.js"></script>
-  <script src="../libs/p5.js"></script>
-  <script src="../libs/p5.dom.js"></script>
-
+  <script src="p5.js"></script>
+  <script src="p5.dom.js"></script>
   <script src="sketch.js"></script>
 
   <style>
