--- a/Smile-Detection/index.html
+++ b/Smile-Detection/index.html
@@ -7,9 +7,9 @@
   <title>Document</title>
   <script defer src="face-api.min.js"></script>
   <script defer src="script.js"></script>
-  <script src="p5.js"></script>
-  <script src="p5.dom.js"></script>
-  <script src="sketch.js"></script>
+  <script defer src="p5.js"></script>
+  <script defer src="p5.dom.js"></script>
+  <script defer src="sketch.js"></script>
 
   <style>
     body {
