--- a/Smile-Detection-dev/index.html
+++ b/Smile-Detection-dev/index.html
@@ -28,6 +28,6 @@
   </style>
 </head>
 <body>
-  <video id="video" width="720" height="560" autoplay muted></video>
+  <video id="video" width="720" height="560" autoplay muted ></video> <!--  -->
 </body>
 </html>
