--- a/Smile-Detection-dev/index.html
+++ b/Smile-Detection-dev/index.html
@@ -10,6 +10,8 @@
   <script defer src="p5.js"></script>
   <script defer src="p5.dom.js"></script>
   <script defer src="sketch.js"></script>
+  <script defer src="ClockCounter.js"></script>  
+
 
   <style>
     body {
