--- a/Smile-Detection/index.html
+++ b/Smile-Detection/index.html
@@ -10,6 +10,8 @@
   <script defer src="p5.js"></script>
   <script defer src="p5.dom.js"></script>
   <script defer src="sketch.js"></script>
+  <script defer src="ClockCounter.js"></script>  
+
 
   <style>
     body {
@@ -28,6 +30,6 @@
   </style>
 </head>
 <body>
-  <video id="video" width="720" height="560" autoplay muted></video>
+  <video id="video" ></video> <!--autoplay muted  width="720" height="560"   -->
 </body>
 </html>
