--- a/Smile-Detection/index.html
+++ b/Smile-Detection/index.html
@@ -10,8 +10,8 @@
   <script defer src="p5.js"></script>
   <script defer src="p5.dom.js"></script>
   <script defer src="sketch.js"></script>
-  <script defer src="ClockCounter.js"></script>  
-
+  <script defer src="ClockCounter.js"></script>
+  <script defer src="SmileCounter.js"></script>
 
   <style>
     body {
