--- a/Smile-Detection-dev/index.html
+++ b/Smile-Detection-dev/index.html
@@ -2,7 +2,10 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <!--
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  -->
+  <meta name="viewport" content="user-scalable=no,initial-scale=1,maximum-scale=1,minimum-scale=1,width=device-width">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Document</title>
   <script defer src="face-api.min.js"></script>
@@ -12,6 +15,7 @@
   <script defer src="sketch.js"></script>
   <script defer src="ClockCounter.js"></script>
   <script defer src="SmileCounter.js"></script>
+
 
   <style>
     body {
